# vtext

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  bench_HashingVectorizer.py  bench_naive_counter.py
.circleci/: config.yml
benchmarks/: README.md  bench_naive_counter.py  bench_ngram.py  bench_scikit-learn.py  bench_sentence_tokenizers.py  bench_stemmers.py  bench_string_similarity.py  bench_tokenizers.py  bench_vectorizers.py  requirements.txt
ci/: requirements-build.txt
ci/azure/: install.cmd  install.sh  posix.yml  test_python.cmd  test_python.sh  test_rust.cmd  test_rust.sh  upload_wheels.cmd  upload_wheels.sh  windows.yml
doc/: api.rst  benchmarks.rst  conf.py  contributing.rst  index.rst  install.rst  python-api.rst  rust-api.rst  user-manual.rst
evaluation/: README.md  eval_tokenization.py
examples/: example1.rs
python/: Cargo.toml  Dockerfile  README.md  pyproject.toml  requirements.txt  run_docker_env.sh  setup.cfg  setup.py  tox.ini
python/pytext_vectorize/: __init__.py  base.py  stem.py  tokenize.py
python/pytext_vectorize/tests/: test_lib.py  test_stem.py  test_tokenize.py
python/src/: lib.rs  stem.rs  token_processing.rs  tokenize.rs  tokenize_sentence.rs  utils.rs  vectorize.rs
python/text_vectorize/: __init__.py  base.py
python/text_vectorize/tests/: test_ext.py  test_lib.py
python/vtext/: __init__.py  base.py  stem.py  token_processing.py  tokenize.py  tokenize_sentence.py  vectorize.py
python/vtext/metrics/: __init__.py  string.py
python/vtext/tests/: __init__.py  test_common.py  test_lib.py  test_metrics.py  test_stem.py  test_token_processing.py  test_tokenize.py  test_tokenize_sentence.py  test_vectorize.py
src/: errors.rs  lib.rs  main.rs  math.rs  tests.rs  tokenize.rs
src/metrics/: mod.rs  string.rs
src/ngram_utils/: mod.rs  tests.rs
src/token_processing/: mod.rs  tests.rs
src/token_processor/: mod.rs  tests.rs
src/tokenize/: mod.rs  tests.rs
src/tokenize_sentence/: mod.rs  tests.rs
src/vectorize/: mod.rs  tests.rs
