[package]
name = "vtext"
version = "0.1.0-alpha.3"
description = "NLP with Rust"
license = "Apache-2.0"
documentation = "https://docs.rs/vtext/"
repository = "https://github.com/rth/vtext"
readme = "README.md"
authors = ["Roman Yurchak <rth.yurchak@pm.me>"]
keywords = [
    "nlp",
    "tokenization",
    "tfidf",
    "levenshtein",
    "matching"
]
edition = "2018"
exclude = [
    "python/*",
    "benchmarks/*",
    "evaluation/*",
    "ud-treebanks-*",
    "data/*",
    "*.tgz",
    "*.zip",
    "sandbox/*"
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
panic = 'unwind'
overflow-checks = false

[dependencies]
regex = "1"
lazy_static = "1.4.0"
seahash = "4.0.0"
itertools = "0.8"
ndarray = "0.13.0"
sprs = {version  = "0.7.1", default-features = false}
unicode-segmentation = "1.6.0"
hashbrown = { version = "0.7", features = ["rayon"] }
rayon = {version = "1.3", optional = true}
dict_derive = {version = "0.2", optional = true}
pyo3 = {version = "0.10.1", optional = true}

[dev-dependencies]
float-cmp = "0.4.0" # for asserting floating point differences in test

[features]
# Additional bindings used from the python wrapper.
python = ["pyo3", "dict_derive"]
