[package]
name = "vtextpy"
version = "0.1.0-alpha.2"
authors = ["Roman Yurchak <rth.yurchak@pm.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
ndarray = "~0.12.0"
sprs = "0.6.2"
vtext = {"path" = "../"}
rust-stemmers = "1.1.0"

[dependencies.numpy]
git = "https://github.com/kngwyu/rust-numpy.git"
branch = "release0.6"
features = ["python3"]

[dependencies.pyo3]
version = "0.7.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
