[package]
name = "vtextpy"
version = "0.1.0-alpha.3"
authors = ["Roman Yurchak <rth.yurchak@pm.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.13"
sprs = {version  = "0.7.1", default-features = false}
vtext = {"path" = "../", features=["python"]}
rust-stemmers = "1.1"

[dependencies.numpy]
version = "0.7"
features = ["python3"]

[dependencies.pyo3]
version = "0.8"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
