[metadata]
name = vtext
description = Natural Language Processing in Rust with Python bidings
long_description = file: README.rst
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
python_requires = ~=3.5

[flake8]
max-line-length = 88
